// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/user_grid/UserGrid should match snapshot with 2 users 1`] = `
<DataGrid
  columns={
    Array [
      Object {
        "field": "name",
        "fixed": true,
        "name": <Memo(MemoizedFormattedMessage)
          defaultMessage="Name"
          id="admin.user_grid.name"
        />,
        "width": 3,
      },
      Object {
        "field": "new",
        "fixed": true,
        "name": "",
      },
      Object {
        "field": "role",
        "name": <Memo(MemoizedFormattedMessage)
          defaultMessage="Role"
          id="admin.user_grid.role"
        />,
        "overflow": "visible",
      },
      Object {
        "field": "remove",
        "fixed": true,
        "name": "",
        "textAlign": "right",
      },
    ]
  }
  endCount={2}
  filterProps={
    Object {
      "keys": Array [],
      "onFilter": [Function],
      "options": Object {},
    }
  }
  loading={false}
  nextPage={[Function]}
  onSearch={[Function]}
  page={0}
  placeholderEmpty={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="No users found"
      id="admin.user_grid.notFound"
    />
  }
  previousPage={[Function]}
  rows={
    Array [
      Object {
        "cells": Object {
          "id": "userid1",
          "name": <UserGridName
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid1",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-1",
              }
            }
          />,
          "new": null,
          "remove": <UserGridRemove
            removeUser={[Function]}
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid1",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-1",
              }
            }
          />,
          "role": <UserGridRoleDropdown
            handleUpdateMembership={[Function]}
            membership={
              Object {
                "delete_at": 0,
                "mention_count": 0,
                "mention_count_root": 0,
                "msg_count": 0,
                "msg_count_root": 0,
                "roles": "team_user",
                "scheme_admin": false,
                "scheme_guest": false,
                "scheme_user": true,
                "team_id": "team",
                "user_id": "userId1",
              }
            }
            scope="team"
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid1",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-1",
              }
            }
          />,
        },
      },
      Object {
        "cells": Object {
          "id": "userid2",
          "name": <UserGridName
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid2",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-2",
              }
            }
          />,
          "new": null,
          "remove": <UserGridRemove
            removeUser={[Function]}
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid2",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-2",
              }
            }
          />,
          "role": <UserGridRoleDropdown
            handleUpdateMembership={[Function]}
            membership={
              Object {
                "delete_at": 0,
                "mention_count": 0,
                "mention_count_root": 0,
                "msg_count": 0,
                "msg_count_root": 0,
                "roles": "team_user",
                "scheme_admin": false,
                "scheme_guest": false,
                "scheme_user": true,
                "team_id": "team",
                "user_id": "userId2",
              }
            }
            scope="team"
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid2",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-2",
              }
            }
          />,
        },
      },
    ]
  }
  rowsContainerStyles={
    Object {
      "minHeight": "160px",
    }
  }
  searchPlaceholder=""
  startCount={1}
  term=""
  total={2}
/>
`;

exports[`components/admin_console/user_grid/UserGrid should match snapshot with 2 users and 1 added included 1`] = `
<DataGrid
  columns={
    Array [
      Object {
        "field": "name",
        "fixed": true,
        "name": <Memo(MemoizedFormattedMessage)
          defaultMessage="Name"
          id="admin.user_grid.name"
        />,
        "width": 3,
      },
      Object {
        "field": "new",
        "fixed": true,
        "name": "",
      },
      Object {
        "field": "role",
        "name": <Memo(MemoizedFormattedMessage)
          defaultMessage="Role"
          id="admin.user_grid.role"
        />,
        "overflow": "visible",
      },
      Object {
        "field": "remove",
        "fixed": true,
        "name": "",
        "textAlign": "right",
      },
    ]
  }
  endCount={3}
  filterProps={
    Object {
      "keys": Array [],
      "onFilter": [Function],
      "options": Object {},
    }
  }
  loading={false}
  nextPage={[Function]}
  onSearch={[Function]}
  page={0}
  placeholderEmpty={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="No users found"
      id="admin.user_grid.notFound"
    />
  }
  previousPage={[Function]}
  rows={
    Array [
      Object {
        "cells": Object {
          "id": "userid-not-saved",
          "name": <UserGridName
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid-not-saved",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-not-saved",
              }
            }
          />,
          "new": <Memo(Tag)
            className="NewUserBadge"
            text={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="New"
                id="admin.user_grid.new"
              />
            }
          />,
          "remove": <UserGridRemove
            removeUser={[Function]}
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid-not-saved",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-not-saved",
              }
            }
          />,
          "role": <UserGridRoleDropdown
            handleUpdateMembership={[Function]}
            membership={
              Object {
                "scheme_admin": false,
                "scheme_user": true,
                "user_id": "userid-not-saved",
              }
            }
            scope="team"
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid-not-saved",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-not-saved",
              }
            }
          />,
        },
      },
      Object {
        "cells": Object {
          "id": "userid1",
          "name": <UserGridName
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid1",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-1",
              }
            }
          />,
          "new": null,
          "remove": <UserGridRemove
            removeUser={[Function]}
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid1",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-1",
              }
            }
          />,
          "role": <UserGridRoleDropdown
            handleUpdateMembership={[Function]}
            membership={
              Object {
                "delete_at": 0,
                "mention_count": 0,
                "mention_count_root": 0,
                "msg_count": 0,
                "msg_count_root": 0,
                "roles": "team_user",
                "scheme_admin": false,
                "scheme_guest": false,
                "scheme_user": true,
                "team_id": "team",
                "user_id": "userId1",
              }
            }
            scope="team"
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid1",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-1",
              }
            }
          />,
        },
      },
      Object {
        "cells": Object {
          "id": "userid2",
          "name": <UserGridName
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid2",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-2",
              }
            }
          />,
          "new": null,
          "remove": <UserGridRemove
            removeUser={[Function]}
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid2",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-2",
              }
            }
          />,
          "role": <UserGridRoleDropdown
            handleUpdateMembership={[Function]}
            membership={
              Object {
                "delete_at": 0,
                "mention_count": 0,
                "mention_count_root": 0,
                "msg_count": 0,
                "msg_count_root": 0,
                "roles": "team_user",
                "scheme_admin": false,
                "scheme_guest": false,
                "scheme_user": true,
                "team_id": "team",
                "user_id": "userId2",
              }
            }
            scope="team"
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid2",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-2",
              }
            }
          />,
        },
      },
    ]
  }
  rowsContainerStyles={
    Object {
      "minHeight": "240px",
    }
  }
  searchPlaceholder=""
  startCount={1}
  term=""
  total={3}
/>
`;

exports[`components/admin_console/user_grid/UserGrid should match snapshot with 2 users and 1 removed user 1`] = `
<DataGrid
  columns={
    Array [
      Object {
        "field": "name",
        "fixed": true,
        "name": <Memo(MemoizedFormattedMessage)
          defaultMessage="Name"
          id="admin.user_grid.name"
        />,
        "width": 3,
      },
      Object {
        "field": "new",
        "fixed": true,
        "name": "",
      },
      Object {
        "field": "role",
        "name": <Memo(MemoizedFormattedMessage)
          defaultMessage="Role"
          id="admin.user_grid.role"
        />,
        "overflow": "visible",
      },
      Object {
        "field": "remove",
        "fixed": true,
        "name": "",
        "textAlign": "right",
      },
    ]
  }
  endCount={1}
  filterProps={
    Object {
      "keys": Array [],
      "onFilter": [Function],
      "options": Object {},
    }
  }
  loading={false}
  nextPage={[Function]}
  onSearch={[Function]}
  page={0}
  placeholderEmpty={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="No users found"
      id="admin.user_grid.notFound"
    />
  }
  previousPage={[Function]}
  rows={
    Array [
      Object {
        "cells": Object {
          "id": "userid2",
          "name": <UserGridName
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid2",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-2",
              }
            }
          />,
          "new": null,
          "remove": <UserGridRemove
            removeUser={[Function]}
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid2",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-2",
              }
            }
          />,
          "role": <UserGridRoleDropdown
            handleUpdateMembership={[Function]}
            membership={
              Object {
                "delete_at": 0,
                "mention_count": 0,
                "mention_count_root": 0,
                "msg_count": 0,
                "msg_count_root": 0,
                "roles": "team_user",
                "scheme_admin": false,
                "scheme_guest": false,
                "scheme_user": true,
                "team_id": "team",
                "user_id": "userId2",
              }
            }
            scope="team"
            user={
              Object {
                "auth_service": "",
                "bot_description": "",
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "first_name": "",
                "id": "userid2",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "nickname": "",
                "notify_props": Object {
                  "calls_desktop_sound": "true",
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "highlight_keys": "",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "user-2",
              }
            }
          />,
        },
      },
    ]
  }
  rowsContainerStyles={
    Object {
      "minHeight": "80px",
    }
  }
  searchPlaceholder=""
  startCount={1}
  term=""
  total={1}
/>
`;
